Update project title, QR generator, and enhance features (#12)
* Update project title and group member details

* feat: tambah QR generator resi & ganti nama project jadi EkspedisiMasRoi (EMR)

- Menambahkan library ZXing di build.gradle.kts.

- Membuat QrGeneratorUtil dan menyambungkannya ke LoketController.

- Menambahkan Javadoc pada QrGeneratorUtil.

- Mengubah nama EkspedisiMasGiant menjadi EkspedisiMasRoi di semua file.

- Mengganti singkatan EMG menjadi EMR pada seluruh aplikasi.

* feat: tambah logger QrGeneratorUtil & update logo project ke resolusi HD

* feat: menambahkan teks kode resi di bawah gambar QR Code & pindahin folder qr_result menjadi subfolder database

* Feat: Button di Views Gudang, Tracking, dan Kurir

* Fix: Bersih Bersih Semua Controller dari Admin Views

* Fix: Add Button Cek Paket di Gudang Views

* Feat: Cek Paket yang masih ada di gudang

* Docs: Merapikan Gudang Controller

* Merge pull request #9

* Feat: Add Controller Admin

* Fix: Solve Logger yang keenter sendiri

* feat: Mengaktifkan qr scanner pada User di Gudang.

* feat: Mengaktifkan qr scanner pada User di Kurir.

* feat: Mengaktifkan qr scanner pada Tracking tanpa login akun

* Merge pull request #16

* Views: Loket Views and Env.example docs

* Feat: Fitur Cek Paket Yang Masih Dibawa tambah Status.

* Refactor: Bikin DTO buat passing objek dan mendetailkan Paket Yang di…

* Refactor: optimasi transfer list Paket DTO di TrackingDAO

* Merge pull request #14

* Merge pull request #18

* Fix: Bug Validasi Kurir Race Condition

* Fix: Menambah State Validation Paket ke KurirController dan Gudang

* Merge pull request #19

* Docs: Update Class Diagram and Kasaran Project Brief.md

* Docs: Update project brief

* Docs: Update Flow Diagram & Add Use Case Diagram for Expedition System

* Docs: Make README.md

* Fix: Database Indexing Backup

* Bug: Fix Bug Kurir Kontroller

* Fix: Bug Kurir dan Gudang #23

* Fix: Bug Kurir dan Gudang

* Merge pull request #25

* Fix: Hapus paketSe